--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 discord-py = "^2.1.1"
 python-dotenv = "^0.21.1"
 
+[tool.poetry.scripts]
+bot = "solcoins.main:main"
 
 [build-system]
 requires = ["poetry-core"]
